# ChangeLog for dev-python/python-swiftclient
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/python-swiftclient/ChangeLog,v 1.11 2014/03/19 23:11:13 bicatali Exp $

  19 Mar 2014; Sébastien Fabbro <bicatali@gentoo.org>
  python-swiftclient-2.0.2.ebuild:
  Keyword ~amd64-linux ~x86-linux

  19 Mar 2014; Sébastien Fabbro <bicatali@gentoo.org>
  python-swiftclient-2.0.2.ebuild:
  Keyword ~amd64-linux ~x86-linux

*python-swiftclient-2.0.2 (17 Feb 2014)

  17 Feb 2014; Matthew Thode <prometheanfire@gentoo.org>
  +python-swiftclient-2.0.2.ebuild:
  fix for CVE-2013-6396 (still needs to be backported to pre 2 (for grizzly
  support)

  28 Nov 2013; Ian Delaney <idella4@gentoo.org> python-swiftclient-1.8.0.ebuild:
  update test phase

*python-swiftclient-1.8.0 (15 Nov 2013)

  15 Nov 2013; Ian Delaney <idella4@gentoo.org>
  +python-swiftclient-1.8.0.ebuild, metadata.xml,
  python-swiftclient-1.6.0.ebuild:
  metadata; add openstack herd, python-swiftclient-1.6.0; reset HOMEPAGE to
  launchpad site, add IUSE doc with dep, doc build & install, update test phase,
  bump

*python-swiftclient-1.6.0 (17 Sep 2013)

  17 Sep 2013; Matthew Thode <prometheanfire@gentoo.org>
  +python-swiftclient-1.6.0.ebuild:
  updating python-swiftclient to 1.6.0

  20 Aug 2013; Matthew Thode <prometheanfire@gentoo.org>
  python-swiftclient-1.5.0.ebuild:
  yay manifest

*python-swiftclient-1.5.0 (11 Aug 2013)

  11 Aug 2013; Matthew Thode <prometheanfire@gentoo.org>
  +python-swiftclient-1.5.0.ebuild, -python-swiftclient-1.2.0-r1.ebuild:
  updating swiftclient to 1.5.0

*python-swiftclient-1.3.0 (11 Mar 2013)

  11 Mar 2013; Matthew Thode <prometheanfire@gentoo.org>
  +python-swiftclient-1.3.0.ebuild:
  just a bump of python-swiftclient to 1.3.0

*python-swiftclient-1.2.0-r1 (11 Jan 2013)

  11 Jan 2013; Matthew Thode <prometheanfire@gentoo.org>
  -python-swiftclient-1.2.0.ebuild, +python-swiftclient-1.2.0-r1.ebuild: